# Quasar-Firewall

./: .gitignore  LICENSE  README.md  app.py  body_model.sav  config.txt  dataset.py  detector.py  detector_flask.py  evolution.py  main.py  neat-checkpoint-119  neat-checkpoint-129  neat-checkpoint-14  neat-checkpoint-144  neat-checkpoint-149  neat-checkpoint-154  neat-checkpoint-159  neat-checkpoint-164  neat-checkpoint-169  neat-checkpoint-174  neat-checkpoint-179  neat-checkpoint-189  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-59  neat-checkpoint-64  neat-checkpoint-69  neat-checkpoint-74  neat-checkpoint-94  neuralnet.py  pyproject.toml  query_model.sav  request.py  request_parser.py  requirements.txt  setup.py  testing.http  testing.rest  (+2 more)
.github/: dependabot.yml
Demo Server/: index.js  package-lock.json  package.json
NN/: app.py  config.txt  dataset.py  detector.py  evolution.py  main.py  neat-checkpoint-99  neuralnet.py  request.py  session-template.md
Server/: index.js  package-lock.json  package.json
checkpoints/: neat-checkpoint-109  neat-checkpoint-119  neat-checkpoint-129  neat-checkpoint-139  neat-checkpoint-149  neat-checkpoint-159  neat-checkpoint-169  neat-checkpoint-179  neat-checkpoint-189  neat-checkpoint-19  neat-checkpoint-199  neat-checkpoint-209  neat-checkpoint-219  neat-checkpoint-229  neat-checkpoint-239  neat-checkpoint-249  neat-checkpoint-259  neat-checkpoint-269  neat-checkpoint-279  neat-checkpoint-289  neat-checkpoint-29  neat-checkpoint-299  neat-checkpoint-309  neat-checkpoint-319  neat-checkpoint-329  neat-checkpoint-339  neat-checkpoint-349  neat-checkpoint-359  neat-checkpoint-369  (+21 more)
(+98 files in other folders)
