[tool.poetry]
name = "quasar-firewall"
version = "1.0.0"
description = "An AI powered firewall designed to detect mallicious HTTP requests and decide weather to process them or not."
authors = ["kaptcha"]
license = "Usagen"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
graphviz = "0.20"
matplotlib = "3.5.2"
neat-python = "0.92"
numpy = "^1.23.1"
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
