[tool.poetry]
name = "quasar-firewall"
version = "1.0.0"
description = "An AI powered firewall designed to detect mallicious HTTP requests and decide weather to process them or not."
authors = ["kaptcha"]
license = "Usagen"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.1"
graphviz = "0.20"
matplotlib = "3.7.1"
neat-python = "0.92"
numpy = "^1.24.4"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
